[package]
name = "cryptography-openssl"
version = "41.0.4"
authors = ["The cryptography developers <cryptography-dev@python.org>"]
edition = "2021"
publish = false
# This specifies the MSRV
rust-version = "1.56.0"
repository = "https://github.com/pyca/cryptography"
description = "Python Cryptography version 41.0.4"

[dependencies]
openssl = "0.10.54"
ffi = { package = "openssl-sys", version = "0.9.85" }
foreign-types = "0.3"
foreign-types-shared = "0.1"
