[package]
name = "cryptography-x509"
version = "41.0.4"
authors = ["The cryptography developers <cryptography-dev@python.org>"]
edition = "2021"
publish = false
# This specifies the MSRV
rust-version = "1.56.0"
repository = "https://github.com/pyca/cryptography"
description = "Python Cryptography version 41.0.4"

[dependencies]
asn1 = { version = "0.15.2", default-features = false }
